# ThermoWerkFirmwareMCU

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: esp-idf-build.yml
docs/: firmware_spec.md  implementation_roadmap.md  ota_update_requirements.md  paperclip_prompt.md  product_requirements.md  uart_protocol.md  ui_requirements.md
main/: CMakeLists.txt  app_config.h  app_main.c  app_state.c  app_state.h  cloud_client.c  cloud_client.h  config_store.c  config_store.h  control.c  control.h  control_loop.c  control_loop.h  embedded_ui.h  history_store.c  history_store.h  local_api.c  local_api.h  modbus_map.c  modbus_map.h  ota_update.c  ota_update.h  output_driver.c  output_driver.h  safety.c  safety.h  ssr_output.c  ssr_output.h  state_manager.c  state_manager.h  thermo_types.h  uart_gateway.c  uart_gateway.h  uart_protocol.c  uart_protocol.h  web_server.c  wifi_manager.c  wifi_manager.h
